force-app/main/default/objects/NCMT_Housing_Plan_Option_Selection__c/NCMT_Housing_Plan_Option_Selection__c.object-meta.xml
<CustomObject>
    <description>Created when a Housing Plan Selection Option is selected on the Housing Plan selection page. Deleted if unselected.</description>
    <label>NCMT Housing Plan - Option Selection</label>
    <nameField>
        <displayFormat>Select-{00000}</displayFormat>
        <label>NCMT Housing Plan Option Selection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Housing Plan Option Selection</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>