force-app/main/default/objects/NCMT_Housing_Plan_Option_Selection__c/fields/Choice__c.field-meta.xml
<CustomField>
    <fullName>Choice__c</fullName>
    <formula>NCMT_Housing_Plan_Option__r.Choice_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Choice</label>
    <type>Text</type>
</CustomField>