force-app/main/default/objects/NCMT_Housing_Plan_Option_Selection__c/fields/Housing_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Housing_Plan_Template__c</fullName>
    <formula>NCMT_Housing_Plan_Option__r.NCMT_Housing_Plan_Option_Template__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Housing Plan Template</label>
    <type>Text</type>
</CustomField>