force-app/main/default/objects/NCMT_Housing_Plan_Option_Selection__c/fields/NCMT_Housing_Plan__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Housing_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>NCMT Housing Plan</label>
    <referenceTo>NCMT_Housing_Plan__c</referenceTo>
    <relationshipLabel>NCMT Housing Plan Option Selection</relationshipLabel>
    <relationshipName>NCMT_Housing_Plan_Option_Selection</relationshipName>
    <type>Lookup</type>
</CustomField>