force-app/main/default/objects/NCMT_Housing_Plan_Option_Selection__c/fields/NCMT_Project__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Project__c</fullName>
    <label>NCMT Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>NCMT Housing Plan Option Selection</relationshipLabel>
    <relationshipName>NCMT_Housing_Plan_Option_Selection</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>