force-app/main/default/objects/NCMT_Housing_Plan_Option_Selection__c/fields/Recurrence__c.field-meta.xml
<CustomField>
    <fullName>Recurrence__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Increase this value if this item cost should be added multiple times, for example if tenants are moving to a temporary space and then the final space.</inlineHelpText>
    <label>Recurrence</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>