force-app/main/default/objects/NCMT_Housing_Plan_Option_Selection__c/fields/Recurs_on_TCO_Tenant_Refresh_Years__c.field-meta.xml
<CustomField>
    <fullName>Recurs_on_TCO_Tenant_Refresh_Years__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurs on TCO Tenant Refresh Years</label>
    <type>Checkbox</type>
</CustomField>