force-app/main/default/objects/NCMT_Housing_Plan_Option_Selection__c/fields/TCO_Replacement_Every_X_Years__c.field-meta.xml
<CustomField>
    <fullName>TCO_Replacement_Every_X_Years__c</fullName>
    <label>TCO Replacement Every X Years</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>